# image2obsidian

./: .gitignore  LICENSE  README.md  SKILL.md  config.example.json  pyproject.toml
docs/: airdrop-detection.md
image2obsidian/: __init__.py  airdrop.py  cli.py  config.py  routing.py  spec.py  vision.py
tests/: test_airdrop.py  test_routing.py
